--- a/src/tpls/apilist.html
+++ b/src/tpls/apilist.html
@@ -4,8 +4,10 @@
             <div class="col-md-12">
                 <div class="list-group">
                     <a ui-sref="#" class="list-group-item active">API分类</a>
+                    <a ui-sref="index.api.ng-repeat" class="list-group-item">ng-repeat</a>
                     <a ui-sref="index.api.filter" class="list-group-item">$filter</a>
                     <a ui-sref="index.api.http" class="list-group-item">$http</a>
+                    <a ui-sref="index.api.animate" class="list-group-item">$animate</a>
                     <a ui-sref="index.api.location({'foo':'bar','baz':'xoxo'})" class="list-group-item">$location</a>
                 </div>
             </div>
