--- a/src/tpls/apilist.html
+++ b/src/tpls/apilist.html
@@ -5,6 +5,8 @@
                 <div class="list-group">
                     <a ui-sref="#" class="list-group-item active">API分类</a>
                     <a ui-sref="index.api.ng-repeat" class="list-group-item">ng-repeat</a>
+                    <a ui-sref="index.api.factory" class="list-group-item">factory</a>
+                    <a ui-sref="index.api.apply" class="list-group-item">$apply</a>
                     <a ui-sref="index.api.filter" class="list-group-item">$filter</a>
                     <a ui-sref="index.api.http" class="list-group-item">$http</a>
                     <a ui-sref="index.api.animate" class="list-group-item">$animate</a>
