--- a/src/tpls/apilist.html
+++ b/src/tpls/apilist.html
@@ -4,6 +4,7 @@
             <div class="col-md-12">
                 <div class="list-group">
                     <a ui-sref="#" class="list-group-item active">API分类</a>
+                    <a ui-sref="index.api.directive" class="list-group-item">directive</a>
                     <a ui-sref="index.api.ng-repeat" class="list-group-item">ng-repeat</a>
                     <a ui-sref="index.api.factory" class="list-group-item">factory</a>
                     <a ui-sref="index.api.apply" class="list-group-item">$apply</a>
