--- a/src/tpls/resource.html
+++ b/src/tpls/resource.html
@@ -2,8 +2,14 @@
 	<div class="panel-heading">
 		<h3 class="panel-title">学习资源</h3>
 	</div>
-	<div class="panel-body">
-		<h5 ng-non-bindable><span class="label label-primary">视频</span> AngularJS实战</h5>
-		<p><span class="label label-warning">地址</span> <a target="_blank" href="http://www.imooc.com/learn/156">http://www.imooc.com/learn/156</a></p>
+	<div class="panel-body"  ng-controller="resCtrl">
+		<div ng-repeat="res in ress">
+			<h5>
+				<span class="label label-primary">{{res.type}}</span> {{res.title}}
+			</h5>
+			<p>
+				<span class="label label-warning">地址</span> <a target="_blank" ng-href="{{res.url}}">{{res.url}}</a>
+			</p>
+		</div>
 	</div>
 </div>
